# kalden

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/templates/: csv_to_dfs0_config_template.xlsx
source/kalden/: core.py
source/kalden/core/datascience/: pandas.py
source/kalden/core/mike/: __init__.py  csv_to_dfs0.py  res1d.py  res1d_widgets.py  timeseries.py
source/kalden/core/spatial/: dxf.py  io.py
source/kalden/styles/: mike_plus_catchments.qml  mike_plus_catchments_centroids.qml  mike_plus_catchments_connections.qml  mike_plus_links.qml  mike_plus_nodes.qml  mike_plus_pumps.qml  mike_plus_weirs.qml  res1d_reach_filling.qml
tests/: test_core.py
