[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kalden"
version = "0.1.0"
description = "Utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Alois Denervaud", email = "myemail@gmail.com" }
]
dependencies = [
    "ezdxf",
    "pandas",
    "shapely",
    "geopandas",
    "numpy",
    "plotly",
    "mikeio",
    "fiona",
    "chardet",
]

[project.optional-dependencies]
plot-export = [
    "kaleido",
]
dev = [
    "pytest",
    "build",
    "twine",
]

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]
