[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalden"
version = "0.1.4"
description = "Utilities"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "ezdxf",
    "pandas",
    "shapely",
    "geopandas",
    "numpy",
    "plotly",
    "mikeio",
    "fiona",
    "chardet",
    "tqdm",
    "networkx",
    "matplotlib",
]

[project.optional-dependencies]
plot-export = [
    "kaleido",
]
mikeplus = [
    "mikeplus",
]
widgets = [
    "ipywidgets",
    "IPython",
]
dev = [
    "pytest",
    "build",
    "twine",
]

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.package-data]
"kalden.styles" = ["*.qml"]

[tool.setuptools.packages.find]
where = ["source"]
